--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <data/>
+    <data>
+        <variable
+            name="viewModel"
+            type="kitefoundation.tech.lesson1.SearchViewModel"
+            />
+    </data>
     <ScrollView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
@@ -68,6 +73,7 @@
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
+                android:text="@{viewModel.searchString}"
                 />
 
 
