--- a/app/src/main/res/layout/layout_todo_item.xml
+++ b/app/src/main/res/layout/layout_todo_item.xml
@@ -29,11 +29,22 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/savebtn"
             app:layout_constraintStart_toEndOf="@id/completed"
             tools:text="SOMETHING WRITTEN EHRE"
             android:text="@{Todo.title}"
             android:layout_margin="10dp"
+            />
+
+        <Button
+            android:id="@+id/savebtn"
+            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            app:layout_constraintTop_toBottomOf="@id/titleTodo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Mark as Fav"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
