--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,5 +15,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             />
 
+        <kitefoundation.tech.lesson1.DialView
+            android:layout_height="200dp"
+            android:layout_width="200dp"
+            android:id="@+id/dialView"
+            app:layout_constraintTop_toBottomOf="@id/logoutBtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="20dp"
+            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
